--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -16,12 +16,15 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="Tesseract" Version="5.2.0" />
 		<PackageReference Include="itext7" Version="9.1.0" />
 		<PackageReference Include="itext7.bouncy-castle-adapter" Version="9.1.0" />
 		<PackageReference Include="PdfiumViewer" Version="2.13.0" />
 		<PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
 		<PackageReference Include="System.Drawing.Common" Version="9.0.4" />
-		<PackageReference Include="Tesseract" Version="5.2.0" />
+		<PackageReference Include="Serilog" Version="4.2.0" />
+		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
